# GenOS

./: .atom-build.yml  .env  Cargo.toml  README.md  ascii  justfile  start.bat
.cargo/: config.toml
src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  logger.rs  main.rs  memory.rs  serial.rs  testing.rs  vga_writer.rs
src/TUI/: desktop.rs  mod.rs  screen.rs
src/game/: audio.rs  desktop.rs  levels.rs  mod.rs  progress.rs  screen.rs  testaudio
src/game/screens/: choke_talk.rs  file_explorer.rs  level.rs  levels.rs  menus.rs  mod.rs  pop_up.rs  screens.rs  template.rs  visual.rs
src/game/screens/pop_ups/: choice.rs  mod.rs  pop_up.rs
src/game/visuals/: boxes.rs
src/hdw/: allocator.rs  gdt.rs  interrupts.rs  mod.rs  pic.rs
src/interface/: default.rs  events.rs  mod.rs
src/io/: logger.rs  mod.rs  qemu.rs  vga_writer.rs
tests/: heap_allocution.rs  stage1.rs
visuals/: ascii
