[package]
name = "genos"
version = "0.1.0"
authors = ["Cypooos <60020572+Cypooos@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
uart_16550 = "0.2.0"
x86_64 = "0.12.1"
spin = "0.5"
volatile = "0.2"
bootloader = "0.9.8"
pic8259_simple = "0.2.0"
pc-keyboard = "0.5.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]


# the profile used for `cargo build`
[profile.dev]
# the profile used for `cargo build --release`
[profile.release]
panic = "abort"

[features]
#   #[cfg(feature = "qemu-connect")]
default = ["qemu-connect", "qemu-debug"]
qemu-connect = []
qemu-debug = []


[package.metadata.bootimage]
test-timeout = 600          # (in seconds)
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio"
]
test-success-exit-code = 33         # (0x10 << 1) | 1
