[package]
name = "genos"
version = "0.2.3"
authors = ["Cypooos <60020572+Cypooos@users.noreply.github.com>"]
edition = "2018"

[features]
default = ["qemu-connect", "qemu-debug","info-bar"]
qemu-connect = []
qemu-debug = []
info-bar = []
audio = []

[dependencies]
bootloader = { version = "0.9.8", features = ["map_physical_memory"]}
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"
pic8259 = "0.10.1"
pc-keyboard = "0.5.0"
linked_list_allocator = "0.10.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]


[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33         # (0x10 << 1) | 1
